# OpenWaterL

./: .gitignore  CMakeLists.txt  OpenWaterL.sln  README.md  _run_cmake.bat
OpenWaterL/: OpenWaterL.vcxproj
doc/: Hello.md
glfw3/: cmake_uninstall.cmake
glfw3/src/: glfw3.pc
help/: Console.cpp  Console.h  CoreGlobal.cpp  CoreGlobal.h  CoreInclude.h  Engine.cpp  Engine.h  EngineConfig.h  FBXVS_Common.cpp  FBXVS_Common.h  FBXVS_GLFunctions.cpp  FBXVS_GLFunctions.h  FBXVS_Main.cpp  FBXVS_Main.h  FBXVS_SceneCache.cpp  FBXVS_SceneCache.h  FBXVS_SceneContext.cpp  FBXVS_SceneContext.h  MyPython.cpp  MyPython.h  Platform.h  Print.cpp  Printf.h  PySys.cpp  PySys.h  SpdLogWrapper.cpp  SpdLogWrapper.h  WindowsApplication.cpp  WindowsApplication.h  WindowsEntry(1).cpp  WindowsEntry.cpp  WindowsPlatform.h  WindowsWindow.cpp  WindowsWindow.h  stdafx.h  targetver.h
note/: 6.md  Chapter1_1.1_简介.md  Chapter1_1.2_符号和定义.md  Chapter1_Introduction.md  Chapter2_2_渲染管线.md  Chapter3_10_GPU_计算着色器.md  Chapter3_1_GPU_并发数据结构.md  Chapter3_2_GPU_管线总览.md  Chapter3_3_GPU_可编程的渲染阶段.md  Chapter3_4_GPU_可编程的着色器和API的演变.md  Chapter3_5_GPU_顶点着色器.md  Chapter3_6_GPU_曲面细分.md  Chapter3_7_GPU_几何着色器.md  Chapter3_8_GPU_像素着色器.md  Chapter3_9_GPU_合并阶段.md  Chapter4_1_Transform_Basic.md  Chapter4_2_Transform_特殊的矩阵变换和运算.md
renderdoc_debug/pc_setting/: family_pc_setting.cap
src/code/: test.cpp
src/code/Console/: Console.cpp  Console.h  StringHasher.h
src/code/Core/: CoreInclude.h  CriticalSection.cpp  CriticalSection.h  Print.cpp  Print.h
src/code/Demo/: demo.cpp  demo.h  demo1.cpp  demo1.h  demo10_material.cpp  demo10_material.h  demo11_multiple_lights.cpp  demo11_multiple_lights.h  demo12_model_loading.cpp  demo12_model_loading.h  demo2.cpp  demo2.h  demo3_triganle.cpp  demo3_triganle.h  demo4_two_triganle_IBO.cpp  demo4_two_triganle_IBO.h  demo5_changing_triganle.cpp  demo5_changing_triganle.h  demo6_texture.cpp  demo6_texture.h  demo7_transform.cpp  demo7_transform.h  demo8_coordinate_systems.cpp  demo8_coordinate_systems.h  demo9_simple_phong.cpp  demo9_simple_phong.h
src/code/RenderHelp/: camera.cpp  camera.h  mesh.h  misc.cpp  misc.h  model.cpp  model.h  shader_s.h
src/code/engineL/: CoreGlobal.h  CoreInclude.h  main.cpp  openwater.h  stdafx.cpp  stdafx.h  task.h
src/code/engineL/FBX/: FBXAPI.h  FBXImportWrap.h
src/code/engineL/Res/: Res.h
src/code/engineL/Task/: task.cpp  task.h
workspace/: 1.fbx
workspace/model/cube/: cube.fbx
workspace/shader_code/: demo10_lighting_maps.fs  demo10_lighting_maps.vs  demo11_light_cube.fs  demo11_multiple_lights.fs  demo13_depth_stencil_test.fs  demo13_depth_stencil_test.vs  demo13_depth_stencil_test_single_color.fs  demo5_changing_triangle.fs  demo5_changing_triangle.vs  demo6_texture.fs  demo8_coordinate_systems.vs  demo9_basic_lighting.fs  demo9_basic_lighting.vs
